--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated\resources\ImplementationGuide-ihe.domain.profile.json
+ig = fsh-generated\resources\ImplementationGuide-ihe.qrph.madx.json
 template = ihe.fhir.template
