--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -30,6 +30,11 @@ jurisdiction: 'http://unstats.un.org/unsd/methods/m49/m49.htm#001'
 #copyright: IHE http://www.ihe.net/Governance/#Intellectual_Property
 copyrightYear: 2021+
 
+dependencies:
+ hl7.fhir.uv.crmi:
+    id: crmi
+    version: 1.0.0
+    reason: This IG uses content management profiles and capabilities provided by the Canonical Resource Management Infrastructure (CRMI) IG
 
 parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+Parameters
   path-resource:
