Example updates and other fixes
- Combined the 2 examples into one. The disaggregation criteria are represented as stratifier components. The first stratifier instance from the Measure and MeasureReport examples contain a disaggregation by 2 dimensions (ageGroup and Gender) for the first disaggregation criterion.
- Aligned the specs with the updated Measure and MeasureReport profiles
- Fixed a warning message by adding a missing dependency.

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -35,6 +35,11 @@ dependencies:
     id: crmi
     version: 1.0.0
     reason: This IG uses content management profiles and capabilities provided by the Canonical Resource Management Infrastructure (CRMI) IG
+ hl7.terminology: 5.5.0
+ hl7.fhir.uv.extensions.r4: 
+    id: ext
+    version: 5.1.0
+    reason: Making this dependency more explicit
 
 parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+Parameters
   path-resource:
