update the pages section to add volume 3 that I mistakenly removed

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -73,6 +73,9 @@ pages:
   QRPH-59.md:
     title: 2:3.59 Retrieve Aggregate Report Definition [QRPH-59]
     generation: markdown
+  volume-3.md:
+    title: Content Modules
+    generation: markdown
   testplan.md:
     title: Test Plan
     generation: markdown
