--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -37,7 +37,7 @@ dependencies:
     reason: This IG uses content management profiles and capabilities provided by the Canonical Resource Management Infrastructure (CRMI) IG
   hl7.terminology.r4:
     version: 6.5.0
-    uri: http://terminology.hl7.org
+    uri: http://terminology.hl7.org/ImplementationGuide/hl7.other.uv.utg
   hl7.fhir.uv.extensions.r4: 
     id: ext
     version: 5.2.0
