--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -7,7 +7,7 @@ canonical: https://profiles.ihe.net/QRPH/mADX
 version: 3.0.0
 name: IHE_QRPH_mADX
 title: "Mobile Aggregate Data Exchange"
-description: The Mobile Aggregate Data Exchange (mADX) Profile supports interoperable public health reporting of aggregate health data. These most typically take the form of routine reports (weekly, monthly, quarterly etc.) from a health facility to some administrative jurisdiction such as a health district, though there are numerous other use cases such as international reporting and community health worker reporting.
+description: The Mobile Aggregate Data Exchange (mADX) Profile supports interoperable public health reporting of aggregate health data. This data most typically takes the form of routine reports (weekly, monthly, quarterly, etc.) from a health facility to some administrative jurisdiction such as a health district, though there are numerous other use cases such as international reporting and community health worker reporting.
 #releaseLabel: ci-build
 #releaseLabel: ballot
 releaseLabel: trial-use
